Update routes names
